[package]
name = "ez"
version = "0.1.0"
edition = "2021"
description = "Easy to use tweening library"
authors = [ "Tei Roberts" ]
documentation = "https://docs.rs/ez"
repository = "https://github.com/ten3roberts/ez"
license = "MIT"

keywords = [ "tween", "math" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.2"

