[package]
name = "ezy"
version = "0.1.1"
edition = "2021"
description = "Easy to use tweening library"
authors = [ "Tei Roberts" ]
documentation = "https://docs.rs/ezy"
repository = "https://github.com/ten3roberts/ezy"
license = "MIT"

keywords = [ "tween", "math" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = ">= 0.12", optional = true }

